--- a/homestyle.css
+++ b/homestyle.css
@@ -1,17 +1,64 @@
 @import url('https://fonts.googleapis.com/css?family=Sniglet|Boogaloo|Slackey|Comfortaa&effect=3d');
 
+.homesite{
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .head{
-    background-color: rgb(238,238,238);
-    text-align:left;
+    background-color: transparent;
+    text-align:center;
     font-family: 'Comfortaa', sans-serif;
+    color: whitesmoke;
+}
+
+.navbar{
+    list-style: none;               
+}
+
+.navbar li a {
+    color: #eef2f3;
+    text-decoration: none;
+    transition: all 0.3s ease 0s;
+}
+
+.navbar li a:hover {
+    color: aquamarine;
 }
 
 .content{
     background-color: rgb(224,224,232);
-    text-align: left;
+    text-align: center;
+    list-style: lower-greek;
+}
+
+.content li a {
+    text-decoration: none;
+    transition: all 0.6s ease 0s;
+}
+
+.content li a:hover {
+    color: aquamarine;
 }
 
 .site footer{
     background-color: rgb(224,224,232);
     text-align: center;
+}
+
+@media screen and (min-width : 800px) {
+
+    .head{
+        text-align:left;
+    }
+
+    .navbar li {
+        display: inline-block;
+        padding: 5px 20px;
+    }
+    
+    .content{
+        text-align:left;
+    }
 }
