--- a/homestyle.css
+++ b/homestyle.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Sniglet|Boogaloo|Slackey|Comfortaa&effect=3d');
 
 .homesite{
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #485563;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .head{
@@ -30,20 +30,23 @@
 .content{
     background-color: rgb(224,224,232);
     text-align: center;
-    list-style: lower-greek;
+    list-style:upper-roman;
+    padding:10px 20px;
+    border: 2px;
+    border-radius: 30%;
 }
 
 .content li a {
     text-decoration: none;
-    transition: all 0.6s ease 0s;
+    transition: all 0.3s ease 0s;
 }
 
 .content li a:hover {
-    color: aquamarine;
+    color:cornflowerblue
 }
 
 .site footer{
-    background-color: rgb(224,224,232);
+    color: #eef2f3;
     text-align: center;
 }
 
@@ -57,7 +60,7 @@
         display: inline-block;
         padding: 5px 20px;
     }
-    
+
     .content{
         text-align:left;
     }
