--- a/homestyle.css
+++ b/homestyle.css
@@ -13,39 +13,32 @@
     color: whitesmoke;
 }
 
-.navbar{
-    list-style: none;               
+.navbar li{
+    list-style: none;
+    text-align: center;               
 }
 
 .navbar li a {
     color: #eef2f3;
     text-decoration: none;
-    transition: all 0.3s ease 0s;
-}
-
-.navbar li a:hover {
-    color: aquamarine;
 }
 
 .content{
     background-color: rgb(224,224,232);
     text-align: center;
-    list-style:upper-roman;
-    padding:10px 20px;
     border: 2px;
-    border-radius: 30%;
+}
+
+.content li{
+    list-style:none;
+    padding:10px 20px;
 }
 
 .content li a {
     text-decoration: none;
-    transition: all 0.3s ease 0s;
 }
 
-.content li a:hover {
-    color:cornflowerblue
-}
-
-.site footer{
+.homesite footer{
     color: #eef2f3;
     text-align: center;
 }
@@ -61,7 +54,28 @@
         padding: 5px 20px;
     }
 
+    .navbar li a {
+        color: #eef2f3;
+        text-decoration: none;
+        transition: all 0.3s ease 0s;
+    }
+
+
+    .navbar li a:hover {
+        color: aquamarine;
+    }
+
     .content{
+        font-size: large;
         text-align:left;
     }
+    
+    .content li a {
+        transition: all 0.3s ease 0s;
+    }
+    
+    .content li a:hover {
+        color:cornflowerblue
+    }
+
 }
