--- a/homestyle.css
+++ b/homestyle.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Sniglet|Boogaloo|Slackey|Comfortaa&effect=3d');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 .homesite{
     background: #485563;  /* fallback for old browsers */
@@ -27,18 +28,19 @@ ul{
 }
 
 .content{
-    width: 80%;
+    width: 90%;
     margin: auto;
     background-color: whitesmoke;
     text-align: center;
     font-size: larger;
+    font-family: 'Roboto', Courier, monospace;
     border: 2px ;
     border-radius: 20px;
 }
 
 .content li{
     list-style:none;
-    padding:10px 20px;
+    padding:8px 20px;
 }
 
 .content li a {
@@ -73,7 +75,6 @@ ul{
     }
 
     .content{
-        font-size: large;
         text-align:left;
     }
     
@@ -82,7 +83,7 @@ ul{
     }
     
     .content li a:hover {
-        color:cornflowerblue
+        color:darkorange;
     }
 
 }
