--- a/homestyle.css
+++ b/homestyle.css
@@ -34,6 +34,7 @@ ul{
     text-align: center;
     font-size: larger;
     font-family: 'Roboto', Courier, monospace;
+    font-weight: bold;
     border: 2px ;
     border-radius: 20px;
 }
