--- a/homestyle.css
+++ b/homestyle.css
@@ -25,7 +25,9 @@ ul{
 
 .navbar li{
     list-style: none;
-    text-align: center;               
+    text-align: center;  
+    font-size: large; 
+    border: 1px solid white;            
 }
 
 .navbar li a {
@@ -47,7 +49,11 @@ ul{
 
 .content li{
     list-style:none;
-    padding:8px 20px;
+    padding: 8px 8px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .content li a {
@@ -59,7 +65,7 @@ ul{
     border: 1px;
     border-radius: 10px;
     background-color:cadetblue;
-    width: 100%;
+    flex-grow: 1;   
 }
 
 
@@ -71,7 +77,7 @@ ul{
 
 
 
-@media screen and (min-width : 800px) {
+@media screen and (min-width : 700px) {
 
     .head{
         text-align:left;
@@ -79,10 +85,12 @@ ul{
 
     .navbar ul{
         display: inline-block;
+       
     }
     .navbar li {
         display: inline-block;
-        padding: 5px 20px;
+        padding: 5px 25px;
+        border: none;
     }
 
     .navbar li a {
@@ -95,10 +103,11 @@ ul{
         color: aquamarine;
     }
 
-    .content{
-        text-align:left;
+    .content ul{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
-    
+
     .content li a {
         transition: all 0.3s ease 0s;
     }
