--- a/Blog/blogstyle.css
+++ b/Blog/blogstyle.css
@@ -174,6 +174,7 @@ ul{
 
     /* main content area item style */
     .content{
+        background-color: transparent;
         display: flex;
         flex-direction: column;
         justify-content:center;
