--- a/Blog/blogstyle.css
+++ b/Blog/blogstyle.css
@@ -177,8 +177,8 @@ ul{
         background-color: transparent;
         display: flex;
         flex-direction: column;
-        justify-content:flex-start;
-        align-items: flex-start;
+        justify-content:center;
+        align-items: center;
         flex: 1 10 auto;
     }
 
