--- a/Blog/Styles/blogstyle.css
+++ b/Blog/Styles/blogstyle.css
@@ -177,13 +177,13 @@ ul{
         background-color: transparent;
         display: flex;
         flex-direction: column;
-        justify-content:center;
+        justify-content:flex-start;
         align-items: center;
         flex: 1 10 auto;
     }
 
     .search-title{
-        margin-top: -100px;
+        margin-top: 100px;
         margin-bottom: 25px;
         display: flex;
         flex-direction: row;
